test/sema/struct_in_condition.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {}
struct S2 {}

fn main() -> void {
  let x = S {};

  if (x) {}
  // CHECK: [[# @LINE - 1 ]]:7: error: expected int in condition

  while (x) {}
  // CHECK: [[# @LINE - 1 ]]:10: error: expected int in condition
}
